14815
{code}
Welcome to Scala version 2.8.0.r20062-b20091209020151 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_17).

scala> List(Some(1), None, Some(2)).flatten
res0: List[Int] = List(1, 2)

scala> Array(Some(1), None, Some(2)).flatten
<console>:5: error: could not find implicit value for parameter asArray: (Option[Int]) => Array[U]
       Array(Some(1), None, Some(2)).flatten
                                     ^
{code}
